add medic description

--- a/oncoFinder2/templates/document/medic_doc_detail.html
+++ b/oncoFinder2/templates/document/medic_doc_detail.html
@@ -33,10 +33,13 @@
 
 
 <h2>Treatment methods:</h2>
-<ul>
+<ul class="pathway_list_ul">
     {%for treatment in treatments%}
         <li>
-        <a href="treat{{treatment.id}}/" >{{treatment}}</a>
+          <div class="well">
+          <h5><a href="treat{{treatment.id}}/" >{{treatment}}</a></h5>
+           {{treatment.treatment}}
+          </div>
         </li>
 {%endfor%}
 </ul>
