--- a/oncoFinder2/templates/medic/medic_nosology_detail.html
+++ b/oncoFinder2/templates/medic/medic_nosology_detail.html
@@ -20,7 +20,7 @@
              <img src='/static/images/pathlist.jpg' alt='{{ path.name }}' title='{{ path.name }}'/>
               </div>  -->
                 <h5><a href='{{treatment.name|slugify}}/{{treatment.id}}'>{{ treatment.name }}</a></h5>
-                 
+                 {{treatment.treatment}}
               </div>
           </li>
         {% endfor %}
