--- a/oncoFinder2/templates/medic/patient_treatment_detail.html
+++ b/oncoFinder2/templates/medic/patient_treatment_detail.html
@@ -42,7 +42,7 @@
 <div id="fragment-4" class="tab-pane in active fade">
     <h4>
       <div style="float:left; width:15px; height:15px; background-color: red"></div>&nbsp; - 
-      This patient is a {%if flag_responder == 0%}non-{%endif%}responder. Responce score = {{patient_votes|floatformat:"-2"}}.
+      This patient is a {%if flag_responder == 0%}non-{%endif%}responder. Response score = {{patient_votes|floatformat:"-2"}}.
       Reliability = {{reliability|floatformat:"-2" }}.
     </h4>
 <div id="container" style="width:900px; height:400px;">
