fail with save to pdf

--- a/oncoFinder2/templates/base_profiles.html
+++ b/oncoFinder2/templates/base_profiles.html
@@ -24,6 +24,7 @@
     <script src="/static/js/d3.v2.min.js"></script>
     <script src="/static/js/jsNetworkx.js"></script>
     <script src="http://code.highcharts.com/highcharts.js"></script>
+    <script src="http://code.highcharts.com/modules/exporting.js"></script>
     
     
 </head>
