edit full medic report

--- a/oncoFinder2/templates/medic/patient_treatment_pdf.html
+++ b/oncoFinder2/templates/medic/patient_treatment_pdf.html
@@ -12,7 +12,7 @@
      <span class="glyphicon glyphicon-folder-open"></span>&nbsp; 
      <a href="/project/{{document.project}}">{{document.project}}</a> /
      <span class="glyphicon glyphicon-file"></span>
-     <small><a href="">{{document.get_filename}}</a></small>
+     <small><a href="/project/{{document.project}}/doc{{document.id}}/">{{document.get_filename}}</a></small>
      <span class="text-muted">| <small>{{document.get_doc_type_display}}</small></span> 
   </h2>
   <span class="text-muted">
